Update: Code fix

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -2,3 +2,7 @@ spring.h2.console.enabled=true
 spring.h2.console.path=/h2
 spring.datasource.url=jdbc:h2:mem:drone-delivery
 spring.devtools.remote.secret=mysecret
+drone.weight.capacity = 500.00
+drone.initial.state = IDLE
+battery.drain.rate.delivering = 2
+battery.drain.rate.returning = 1
